@@ -1209,10 +1209,13 @@ that shear stresses are constant across the width of a section
 without consideration of lateral strains arising from the Poisson effect).  
 These shear area equations are computed based upon an assumed uniform shear flow across the 
 wall of tube sections.  
+Other shear correction factors, based on A.E.H. Love's theory of elasticity,
+are tabulated in 
+reference <a href="http://scitation.aip.org/getabs/servlet/GetabsServlet?prog=normal&id=JAMCAV000033000002000335000001&idtype=cvips&gifs=yes&ref=no">5</a>.
 Additional shear area approximations (below) for solid circular and rectangular sections
 having a Poisson ratio, <i>v</i>, from 0.16 to 0.38 do account for Poisson's effect and have been experimentally validated.  
-(See references <a href="http://www.sciencedirect.com/science/article/pii/S0020768310000685">6</a>, 
-<a href="http://iopscience.iop.org/0022-3727/11/14/010">8</a>, and <a href="http://iopscience.iop.org/0022-3727/10/11/009">16</a>.)
+(See references <a href="http://www.sciencedirect.com/science/article/pii/S0020768310000685">7</a>, 
+<a href="http://iopscience.iop.org/0022-3727/11/14/010">9</a>, and <a href="http://iopscience.iop.org/0022-3727/10/11/009">17</a>.)
 </p>
 <p>
 Regardless of the section shape and Poisson ratio, the shear areas <i>Asy</i> and <i>Asz</i> are less than the cross section area <i>Ax</i>. 
@@ -1355,7 +1358,7 @@ Asz coefficients
 <p>
 Approximate formulae for the effective shear areas of solid circular and rectangular cross sections including the Poisson effect (for Poisson ratio, <i>v</i>,
 from 0.16 to 0.38) have been experimentally validated.  
-(See references <a href="http://iopscience.iop.org/0022-3727/11/14/010">8</a> and <a href="http://iopscience.iop.org/0022-3727/10/11/009">16</a>.)
+(See references <a href="http://iopscience.iop.org/0022-3727/11/14/010">9</a> and <a href="http://iopscience.iop.org/0022-3727/10/11/009">17</a>.)
 
 <ul>
 <li> <b> Solid Circular Section:</b> <i> Asy = Asz = Ax (6+12v+6v<sup>2</sup>)/(7+12v+4v<sup>2</sup>) </i>
@@ -1365,7 +1368,7 @@ from 0.16 to 0.38) have been experimentally validated.
 <p>
 For solid circular sections <i>Ax/As</i> ranges from 1.13 to 1.05 for <i>v</i> between 0.1 and 0.4.  
 For solid rectangular sections <i>Ax/As</i> ranges from 1.18 to 1.14 for <i>v</i> between 0.1 and 0.4.  
-Reference <a href="http://www.sciencedirect.com/science/article/pii/S0020768310000685">6</a>
+Reference <a href="http://www.sciencedirect.com/science/article/pii/S0020768310000685">7</a>
 compares a number of methods for computing the shear correction factor
 and presents results for other shapes.   
 </p>
@@ -2788,7 +2791,12 @@ John Wiley & Sons, 1993.            ISBN: 0471551570
 <a href="http://www.amazon.com/exec/obidos/ASIN/0070113920/qid%3D1003514837/ref%3Dsr%5F11%5F0%5F1/002-2386037-4350467">Dynamics of Structures</a>,
 McGraw-Hill, 1993.   ASIN: 0070113920
 
-<li> J. P. Den Hartog,
+<li> G.R. Cowper,
+<a href="http://scitation.aip.org/getabs/servlet/GetabsServlet?prog=normal&id=JAMCAV000033000002000335000001&idtype=cvips&gifs=yes&ref=no">
+Shear coefficient in Timoshenko's Beam Theory</a>,
+<i> Journal of Applied Mechanics</i> vol. 33, no. 2, pp. 335-346, 1966.
+
+<li> J.P. Den Hartog,
 <a href="http://www.amazon.com/exec/obidos/ASIN/0486654079/qid=1003515697/sr=2-1/ref=sr_2_11_1/002-2386037-4350467">Advanced Strength of Materials</a>,
 Dover Press, 1987.   ISBN: 0486654079
 
